[tool.poetry]
name = "olfactory-navigator"
version = "0.1.0"
description = ""
authors = ["ljstolting <ljstolting@gmail.com>"]
readme = "README.md"
packages = [{include = "olfactory_navigator"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
